[project]
name = "blocket_api"
version = "0.3.2"
description = "A python API wrapper for blocket.se"
authors = [{name = "dunderrrrrr", email = "emil.bjorkroth@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "respx>=0.21.1",
    "mypy>=1.15.0",
    "pydantic>=2.11.7",
]


[tool.pytest.ini_options]
testpaths = [
    "tests/*",
]
