[project]
name = "blocket_api"
version = "0.3.5"
description = "A python API wrapper for blocket.se"
authors = [{name = "dunderrrrrr", email = "emil.bjorkroth@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "respx>=0.21.1",
    "mypy>=1.15.0",
    "pydantic>=2.11.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocs-swagger-ui-tag>=0.7.2",
    "websockets>=15.0.1",
]


[tool.pytest.ini_options]
testpaths = [
    "tests/*",
]
