[project]
name = "blocket_api"
version = "0.4.3"
description = "A python API wrapper for blocket.se"
authors = [{name = "dunderrrrrr", email = "emil.bjorkroth@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "mypy>=1.19.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-swagger-ui-tag>=0.7.2",
    "beautifulsoup4>=4.14.3",
]


[tool.pytest.ini_options]
testpaths = [
    "tests/*",
]
